Fixed table alignment problem
so it doesnt jump around like before

--- a/stickers.css
+++ b/stickers.css
@@ -15,7 +15,7 @@ width:8%;
 }
 
 table {
-margin:auto;
+margin-left:10%;
 margin-top:-27%;
 width:80%;
 font-size:20px;
